changed the placeholder

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <main>
         <form action="" id="pokemonForm">
-            <input class="search" type="text" id="input" placeholder="Search by ID">
-            <button class="btn btn-primary" type="submit" id="submit">Enter the ID or name of a Pokemon</button>
+            <input class="search" type="text" id="input" placeholder="Enter the ID or name of a Pokemon">
+            <button class="btn btn-primary" type="submit" id="submit">Search</button>
         </form>
 
         <div class="card-wrapper id="pokemonContainer">
